Added search review for textfield